Added conference subject to template. Renamed codename "theme" to "subject".

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -86,7 +86,7 @@
             <label for="message-template" class="conf-form__label" data-i18n="optionsMessageTemplate"></label>
             <p class="template__vars-title" data-i18n="optionsMessageTemplateDescriptionTitle"></p>
             <ul class="template__vars-list">
-                <li>${title} — <span data-i18n="templateConfName"></span></li>
+                <li>${confSubject} — <span data-i18n="templateConfSubject"></span></li>
                 <li>${description} — <span data-i18n="templateConfDescription"></span></li>
                 <li>${organizer} — <span data-i18n="templateOrganizer"></span></li>
                 <li>${startDate} — <span data-i18n="templateStartDate"></span></li>
