--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -12,8 +12,8 @@
             <input type="text" id="conf-name" value="" class="conf-form__field conf-form__field_big">
         </div>
         <div class="conf-form__field-group conf-form__group">
-            <label for="conf-theme" class="conf-form__label" data-i18n="popupConfTheme"></label>
-            <input type="text" id="conf-theme" value="" class="conf-form__field conf-form__field_big">
+            <label for="conf-subject" class="conf-form__label" data-i18n="popupConfSubject"></label>
+            <input type="text" id="conf-subject" value="" class="conf-form__field conf-form__field_big">
         </div>
         <div class="conf-form__field-group conf-form__group">
             <label for="conf-start-date" class="conf-form__label" data-i18n="popupStart"></label>
