added: – in addon settings meet duration config – on open popup event set current date&time values and immediate calculation end dat&time

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -23,15 +23,15 @@
             </div>
         </div>
         <div class="conf-form__field-group conf-form__group">
+            <label for="conf-duration" class="conf-form__label" data-i18n="popupDuration"></label>
+            <input type="number" id="conf-duration" class="conf-form__field conf-form__field_small" value="">
+        </div>
+        <div class="conf-form__field-group conf-form__group">
             <label for="conf-end-date" class="conf-form__label" data-i18n="popupEnd"></label>
             <div class="conf-form__fields-row">
                 <input type="date" id="conf-end-date" class="conf-form__field conf-form__field_medium js-date-time-input" value="">
                 <input type="time" id="conf-end-time" class="conf-form__field conf-form__field_small js-date-time-input" value="">
             </div>
-        </div>
-        <div class="conf-form__field-group conf-form__group">
-            <label for="conf-duration" class="conf-form__label" data-i18n="popupDuration"></label>
-            <input type="text" id="conf-duration" class="conf-form__field conf-form__field_small js-date-time-input" value="">
         </div>
         <div class="conf-form__group note">
             <p class="note__item"><span data-i18n="popupTimezoneValue"></span>: <span id="js-timezone-value"></span></p>
