--- a/src/options/options.html
+++ b/src/options/options.html
@@ -48,6 +48,11 @@
             </div>
         </div>
 
+        <div class="conf-form__field-group conf-form__group">
+            <label for="duration" class="conf-form__label" data-i18n="optionsDuration"></label>
+            <input type="number" id="duration" value="" min="1" placeholder="30" class="conf-form__field">
+        </div>
+
         <div class="conf-form__group">
             <h2 class="conf-form__group-title" data-i18n="optionsConfSettings"></h2>
             <div class="conf-form__field-group conf-form__field-group_flex conf-form__list-field-item">
