Added validation of server name value.

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -21,7 +21,7 @@
             <div class="conf-form__field-group conf-form__field-group_flex conf-form__list-field-item">
                 <input type="radio" name="server" id="server-custom" value="custom" class="conf-form__radio">
                 <label for="server-custom" class="conf-form__label" data-i18n="optionsServerAddressPrivate"></label>
-                <input type="text" id="server-custom-value" value="" class="conf-form__field conf-form__field_in-flex" placeholder="meet.jit.si">
+                <input type="text" id="server-custom-value" value="" class="conf-form__field conf-form__field_in-flex" placeholder="https://meet.jit.si/" disabled>
             </div>
         </div>
 
