Added validation to custom conference name.

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -44,7 +44,7 @@
             <div class="conf-form__field-group conf-form__field-group_flex conf-form__list-field-item">
                 <input type="radio" name="conf-name" id="conf-name-custom" value="custom" class="conf-form__radio">
                 <label for="conf-name-custom" class="conf-form__label" data-i18n="optionsConfNameOwn"></label>
-                <input type="text" id="conf-name-custom-value" value="" class="conf-form__field conf-form__field_in-flex" placeholder="daily-meeting">
+                <input type="text" id="conf-name-custom-value" value="" class="conf-form__field conf-form__field_in-flex" placeholder="daily-meeting" disabled>
             </div>
         </div>
 
