Added store data in local storage by windowID for autofill popup form if there is already data.

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -8,29 +8,29 @@
 <body>
     <form id="conf-form" class="conf-form">
         <div class="conf-form__field-group conf-form__group">
-            <label for="conf-name" class="conf-form__label" data-i18n="popupConfName"></label>
-            <input type="text" id="conf-name" value="" class="conf-form__field conf-form__field_big">
+            <label for="conf-name-custom-value" class="conf-form__label" data-i18n="popupConfName"></label>
+            <input type="text" id="conf-name-custom-value" name="conf-name-custom-value" value="" class="conf-form__field conf-form__field_big">
         </div>
         <div class="conf-form__field-group conf-form__group">
             <label for="conf-subject" class="conf-form__label" data-i18n="popupConfSubject"></label>
-            <input type="text" id="conf-subject" value="" class="conf-form__field conf-form__field_big">
+            <input type="text" id="conf-subject" name="conf-subject" value="" class="conf-form__field conf-form__field_big">
         </div>
         <div class="conf-form__field-group conf-form__group">
             <label for="conf-start-date" class="conf-form__label" data-i18n="popupStart"></label>
             <div class="conf-form__fields-row">
-                <input type="date" id="conf-start-date" class="conf-form__field conf-form__field_medium js-date-time-input" value="">
-                <input type="time" id="conf-start-time" class="conf-form__field conf-form__field_small js-date-time-input" value="">
+                <input type="date" id="conf-start-date" name="conf-start-date" class="conf-form__field conf-form__field_medium js-date-time-input" value="">
+                <input type="time" id="conf-start-time" name="conf-start-time" class="conf-form__field conf-form__field_small js-date-time-input" value="">
             </div>
         </div>
         <div class="conf-form__field-group conf-form__group">
             <label for="conf-duration" class="conf-form__label" data-i18n="popupDuration"></label>
-            <input type="number" id="conf-duration" class="conf-form__field conf-form__field_small" value="">
+            <input type="number" id="conf-duration" name="conf-duration" class="conf-form__field conf-form__field_small" value="">
         </div>
         <div class="conf-form__field-group conf-form__group">
             <label for="conf-end-date" class="conf-form__label" data-i18n="popupEnd"></label>
             <div class="conf-form__fields-row">
-                <input type="date" id="conf-end-date" class="conf-form__field conf-form__field_medium js-date-time-input" value="">
-                <input type="time" id="conf-end-time" class="conf-form__field conf-form__field_small js-date-time-input" value="">
+                <input type="date" id="conf-end-date" name="conf-end-date" class="conf-form__field conf-form__field_medium js-date-time-input" value="">
+                <input type="time" id="conf-end-time" name="conf-end-time" class="conf-form__field conf-form__field_small js-date-time-input" value="">
             </div>
         </div>
         <div class="conf-form__group note">
